trainer sessions updated

--- a/apps/templates/home/trainerreport.html
+++ b/apps/templates/home/trainerreport.html
@@ -1,5 +1,6 @@
 {% extends "layouts/base.html" %}
 {% load static %}
+{% load weekdayFinder %}
 
 {% block title %} Profile {% endblock %} 
 
@@ -107,6 +108,8 @@
               {% if superuserview %}
               <li><a href="#summary" data-toggle="tab">مجموع حضور </a></li>
               <li><a href="#sessions" data-toggle="tab">گزارش حضور</a></li>
+              <li><a href="#sheets" data-toggle="tab">گزارش ترم</a></li>
+
               {% endif %}
             </ul>
             <div class="tab-content">
@@ -132,6 +135,39 @@
               <div class=" tab-pane" id="summary">
                 <p>تا کنون در ماه {{mont}} تعداد جلسات: {{count }}</p>
                 <p>مجموع حق زحمه در این ماه تا کنون {{ sumOfMounth }}</p>
+              </div>
+                <div class="tab-pane" id="sheets">
+                <div class="box-body table-responsive no-padding">              
+
+                                  <select id="itemSelect"  name="sheetselect" >
+                                  <option value="">یک شیت انتخاب کنید</option>  
+                                  {% for attend in sheeto %}
+                                      <option value="{{attend.id}}"  data-start2="{{ attend.doa_1}}" data-end2="{{ attend.doa_last }}">{{ attend.aname }}</option>
+                                    {% endfor %}
+                                </select>
+
+                  <table class="table table-hover" id="table3" style="direction: rtl;">
+                      <thead>
+                          <tr>
+                                    <th style="text-align: right;">ردیف</th>
+                                    <th style="text-align: right;">روز حضور</th>
+                                    <th style="text-align: right;"> تعداد نفرات</th>
+                          </tr>
+                      </thead>
+                               <tbody>
+                                {% for s in trainerseesion%}
+                                <tr>
+                                    <td>{{s.id}}</td>
+                                    <td>{{s.dos}}</td>
+                                    <td>{{s.sstudent.all | length}}</td>
+                                </tr>
+                                {%endfor%}
+                              </tbody>  
+
+                  </table>
+                  <ul id="itemList"></ul>
+
+                </div>              
               </div>
               <!-- /.tab-pane -->
 
@@ -233,6 +269,46 @@
 
 
 <script>
+
+
+
+    
+var originalData
+var table3 
+$(document).ready(function() {
+    // Initialize DataTable
+    table3 = $('#table3').DataTable({
+        "order": [[1, "asc"]],
+        "searching": false,
+        "paging": false
+    });
+    originalData = table3.rows().data();
+});
+
+    $('#itemSelect').on('change', function() {
+        var selectedOption2 = $(this).find('option:selected');
+        var firstDate2 = selectedOption2.data('start2');
+        var lastDate2 = selectedOption2.data('end2');
+        //var rows=table3.rows().data();
+        var rows=originalData
+        console.log("first date",firstDate2)
+        console.log("last date",lastDate2)
+        console.log(table3)
+        var arr2=[];
+        console.log(rows.length)
+        for (var i=0; i<rows.length; i++){
+          var data2=rows[i];
+          if ((data2[1] >= firstDate2) && (data2[1] <= lastDate2)){
+                  console.log(i,data2)
+                  arr2.push(rows[i]);
+                }    
+    }
+
+    table3.clear();
+    table3.rows.add(arr2)
+    table3.draw();
+    });
+  
 function convertPersianToEnglishDigits(persianString) {
     // Ensure persianString is a string
     if (typeof persianString !== 'string') {
